--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,26 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/main_textview1"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
         android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:gravity="center"
+        android:textSize="30sp"
         app:layout_constraintTop_toTopOf="parent" />
+    <Button
+        android:id="@+id/main_button1"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:text="Button1"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+    <Button
+        android:id="@+id/main_button2"
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:text="Button2"
+        app:layout_constraintTop_toBottomOf="@id/main_button1"
+        android:layout_marginTop="10dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
